--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p class="links__title">В контакте</p>
             <a class="linsk__link" href="http://vk.com/id317117846"
               >id317117846</a
-            >
+            > 
           </li>
         </ul>
       </section>
@@ -48,6 +48,10 @@
           <li class="links__link">
             <p class="links__title">Мечтаю</p>
             <a class="linsk__link" href="Дом.png" alt="Дом">о собственном доме</a>
+          </li>
+          <li class="links__link">
+            <p class="links__title">Кем хочу быть</p>
+            <a class="linsk__link">QA</a>
           </li>
         </ul>
       </section>
